--- a/10/8-3/main.css
+++ b/10/8-3/main.css
@@ -64,15 +64,18 @@ div.nav ul .login a {
 
 
 /*导航条样式结束*/
-
 div.info {
-    height: 694px;
+    height: 688px;
     width: 1275px;
+    overflow: hidden;
     background-image: url(img/info.png);
     background-repeat: no-repeat;
-    padding-left: 150px;
-    padding-top: 260px;
     color: #fff;
+}
+
+.info div {
+    margin-left: 150px;
+    margin-top: 260px;
 }
 
 div.info h2 {
@@ -91,4 +94,26 @@ p.go {
     background-color: #E8504F;
     text-align: center;
     margin-top: 65px;
+    font-family: 微软雅黑
+}
+
+.slogan {
+    height: 250px;
+    padding: 40px 0;
+}
+
+.slogan .sblock {
+    width: 316px;
+    text-align: center;
+    float: left;
+}
+
+.sblock p {
+    margin-top: 36px;
+    padding: 5px 70px;
+    border-right: 2px #ededed solid;
+}
+
+div.sblock:last-child p {
+    border-right: none;
 }
